--- a/css/main.css
+++ b/css/main.css
@@ -83,9 +83,128 @@ textarea {
   resize: vertical;
 }
 
+
+
+
+
+
+
+
+
+
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+
+
+  
+   /* -------------------- Base Header - Footer Styles -------------------- */
+   header {
+    display: flex;
+    justify-content: center;
+   }
+   
+   
+   header .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
+header nav ul {
+    display: flex;
+    justify-content: space-around;
+  }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+footer .socal-icons {
+display: flex;
+justify-content: space-around;
+align-items: center;
+}
+
+footer .socal-icons p {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+
+
+
+
+
+.hero-area {
+  display: flex;
+  justify-content: center;
+}
+
+/* Aside */
+
+aside {
+  display: flex;
+  justify-content: center;
+}
+
+/* features */
+
+.features {
+  display: flex;
+  justify-content: center;
+}
+
+.features .features-items {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: row wrap;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* FQA PAGE=========================================================
+================================ */
+
+.faq {
+  display:flex;
+  justify-content: center;
+}
+
+.faq .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: row wrap;
+}
 
 /* ==========================================================================
    Helper classes
