--- a/css/main.css
+++ b/css/main.css
@@ -91,32 +91,45 @@ textarea {
 
 
 
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
 
-
-  
-   /* -------------------- Base Header - Footer Styles -------------------- */
+   .content-wrapper{
+  outline: 3px dotted red;
+  width: 90%;
+  margin: 50px 0;
+}
+ /* -------------------- Base Header - Footer Styles -------------------- */
    header {
     display: flex;
     justify-content: center;
-   }
-   
+padding: 15px 0;
+  }
    
    header .content-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 0;
   }
+
+.header-divider {
+width: 100%;
+height: 1px;
+margin: 10px 0 20px 0;
+}
+
+header nav {
+  width: 60%;
+}
 
 header nav ul {
     display: flex;
     justify-content: space-around;
+width: 100%;
   }
 
 footer {
@@ -124,6 +137,18 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+}
+
+footer contact {
+  margin-bottom: 50px;
 }
 
 footer .socal-icons {
@@ -136,6 +161,10 @@ footer .socal-icons p {
 display: flex;
 justify-content: center;
 align-items: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
 }
 
 
@@ -155,11 +184,20 @@ aside {
   justify-content: center;
 }
 
-/* features */
 
+/* features */
 .features {
   display: flex;
   justify-content: center;
+}
+
+.features h2 {
+  margin-bottom: 60px;
+} 
+
+.features article {
+width: 63%;
+margin: 30px 0;
 }
 
 .features .features-items {
@@ -169,25 +207,42 @@ aside {
   flex-flow: row wrap;
 }
 
+.features p {
+  margin: 0;
+}
 
 
 
 
+/*reviews*/
+
+.reviews {
+  display: flex;
+  justify-content: center;
+}
+
+.reviews h2 {
+
+}
+
+.reviews h3 {
+  width: 55%;
+}
 
 
+.mission {
+  display: flex;
+  justify-content: center;
+}
 
+.content-section {
+  display: flex;
+  justify-content: center;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.contact-content p{
+margin: 0;
+}
 
 
 
@@ -204,6 +259,15 @@ aside {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
+}
+
+.faq h2 {
+margin: 40px;
+}
+
+.faq-content {
+margin-bottom: 50px;
 }
 
 /* ==========================================================================
