--- a/css/main.css
+++ b/css/main.css
@@ -91,16 +91,66 @@ textarea {
 
 
 
+
+
+
+
+
+
+
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
+/* General Styles */
 
-   .content-wrapper{
-  outline: 3px dotted red;
+html {
+  font-size: 1rem;
+}
+
+body {
+  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+}
+
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+  margin: 20px 0;
+  font-size: 1.125em;
+}
+
+p {
+  font-size: .875em;
+  line-height: 1.285;
+}
+
+address {
+  font-style: normal;
+}
+
+.content-wrapper {
   width: 90%;
   margin: 50px 0;
 }
+
  /* -------------------- Base Header - Footer Styles -------------------- */
    header {
     display: flex;
