--- a/css/main.css
+++ b/css/main.css
@@ -92,12 +92,12 @@ textarea {
 
 
 
-
-
-
-
-
-
+.browserupgrade {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
 
 /* ==========================================================================
    Author's custom styles
@@ -251,7 +251,7 @@ input[type=button] {
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 1.125em;
-  color: #e2e3ed;
+  color: #e3e4ec;
   border: none;
   text-align: center;
   text-transform: uppercase;
@@ -496,7 +496,7 @@ margin-bottom: 50px;
     .features h2 {
       margin-bottom: 20px;
     }
-    
+
     .features article {
       display: flex;
       align-items: center;
