--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
+
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
@@ -84,6 +85,7 @@
   /* ==========================================================================
      Browser Upgrade Prompt
      ========================================================================== */
+  
   .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
@@ -157,6 +159,7 @@
   }
   
   /* -------------------- Base Header - Footer Styles -------------------- */
+  
   header {
     display: flex;
     justify-content: center;
@@ -239,6 +242,7 @@
   /* -------------------- Mobile Styles - Homepage -------------------- */
   
   /* Hero Area */
+  
   .hero-area {
     background: url(../img/unplugged-retreat.jpg);
     background-size: cover;
@@ -254,7 +258,9 @@
     font-weight: 500;
     line-height: 1.2;
   }
+  
   /* Aside */
+  
   aside {
     background-color: #527158;
     display: flex;
@@ -335,6 +341,7 @@
     width: 55%;
     margin: 20px 0;
   }
+  
   /* ==========================================================================
      About Page
      ========================================================================== */
@@ -343,6 +350,22 @@
     background-color: #527158;
     display: flex;
     justify-content: center;
+  }
+  
+  .map figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 125%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
   
   .contact-section {
@@ -670,14 +693,17 @@
     .content-wrapper {
       max-width: 960px;
     }
+  
     /* Header */
     header {
       padding: 15px 0;
     }
+  
     h2 {
       font-size: 2.25em;
     }
-   h3,
+  
+    h3,
     h4 {
       font-size: 1.875em;
     }
@@ -692,7 +718,8 @@
       font-size: 3.75em;
       width: 80%;
     }
-  /* Aside */
+  
+    /* Aside */
     aside .content-wrapper {
       justify-content: space-around;
     }
@@ -707,7 +734,9 @@
     }
   
     /* Features */
-  .features h2 {
+  
+  
+    .features h2 {
       width: 90%;
     }
   
@@ -716,16 +745,20 @@
     }
   
     /* Reviews */
-  .reviews h2 {
+  
+    .reviews h2 {
       padding-bottom: 50px;
     }
-  .reviews article div {
+  
+    .reviews article div {
       width: 42%;
     }
+  
     footer h4 {
       font-size: 1.875em;
     }
-   /* ==========================================================================
+  
+    /* ==========================================================================
     About Page
     ========================================================================== */
   
@@ -746,7 +779,8 @@
       width: 100%;
       font-size: 3em;
     }
-  .faq h4,
+  
+    .faq h4,
     .faq p {
       font-size: 1.125em;
       line-height: 1;
@@ -760,6 +794,7 @@
      ========================================================================== */
   
   @media print {
+  
     *,
     *:before,
     *:after {
