--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,11 @@
     align-items: flex-start;
     flex-flow: row wrap;
   }
+
+  .features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
+  }
   
   .features p {
     text-align: center;
