--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@
     font-family: 'Open Sans', sans-serif;
     color: #e2e3ed;
     text-align: left;
+    background-color: #202322;
   }
   
   ul,
@@ -794,7 +795,7 @@
     .map figure {
       padding-bottom: 37.5%;
     }
-    
+
     .mission h2,
     .contact-section .content-wrapper h2 {
       width: 95%;
